--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "commands": "./lib/commands",
     "bin": "sfdx",
     "topics": {
-      "hello": {
-        "description": "Commands to say hello."
+      "bbmutans": {
+        "description": "Mutation testing commands."
       }
     }
   },
