--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bbmutation",
   "description": "Salesforce CLI plug-in to generate mutant Apex code and execute test suites against it.",
-  "version": "1.0.1",
+  "version": "2.0.1",
   "author": "Keir Bowden @keirbowden",
   "bugs": "https://github.com/keirbowden/bbmutation/issues",
   "dependencies": {
@@ -52,7 +52,7 @@
     "commands": "./lib/commands",
     "bin": "sfdx",
     "topics": {
-      "bbmutans": {
+      "bbmutant": {
         "description": "Mutation testing commands."
       }
     }
